test-suite/for-in/typecheck/pass/for_in_exclusive_typed.first
interaction main() -> Unit {
  for i in 0..3 {
    let _: Int = i;
  };
  return;
}
