test-suite/for-in/typecheck/fail/for_in_over_non_iterable.first
interaction main() -> Unit {
  for x in 42 { let _ = x; };
  return;
}
